# voting

./: MAINTAINERS  Makefile.am  README  README.md  autogen.sh  configure.in
vote/: COPYING  Makefile.am  blt.wml  index.wml  overview.wml  results.wml  verify.wml  vote.css  vote.wml  votes.wml
vote/2000/: Makefile.am  candidates.wml  index.wml  list-addresses.py  registered-voters.txt  results.wml  rules.wml  verify.wml  vote-archives.diff  vote-counter.py  voters.wml
vote/2001/: Makefile.am  candidates.wml  index.wml  registered-voters.txt  results.txt  rules.wml  verify.wml  vote-archives.diff  vote-counter.py  voters.wml
vote/2002/: Makefile.am  candidates.wml  index.wml  list-addresses.py  preliminary-results.wml  registered-voters.txt  results.txt  rules.wml  verify.wml  vote-archives.diff  vote-counter.py  voters.wml
vote/2003/: Makefile.am  candidates.wml  index.wml  preliminary-results.wml  results.txt  rules.wml  verify.wml  voters.wml
vote/2004/: Makefile.am  candidates.wml  index.wml  preliminary-results.wml  rules.wml  timeline.ics  verify.wml  voters.wml
vote/2004-10/: Makefile.am  index.wml  preliminary-results.wml  rules.wml  verify.wml  voters.wml
vote/2005/: Makefile.am  candidates.wml  index.wml  rules.wml  timeline.ics  voters.wml
vote/2005-10/: Makefile.am  index.wml  rules.wml  timeline.ics  voters.wml
vote/2006/: Makefile.am  candidates.wml  index.wml  rules.wml  timeline.ics
vote/2007/: Makefile.am  candidates.wml  index.wml  rules.wml  timeline.ics
vote/2007-10/: Makefile.am  index.wml
vote/2009/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  voting-instructions.txt
vote/2010/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  voting-instructions.txt
vote/2011/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
(+25 files in other folders)
