AC_INIT
AM_INIT_AUTOMAKE(foundation-web, 0.1)

AC_ARG_WITH(http_prefix, [  --with-http-prefix=DISTRIBUTOR  Specify http prefix for local testing, such as http://localhost/~user/gnomesites/])

if test "x$with_http_prefix" != x ; then
	HTTP_PREFIX=$with_http_prefix
else
	HTTP_PREFIX=http:/
fi

AC_SUBST(HTTP_PREFIX)

AC_OUTPUT([
Makefile
vote/Makefile
vote/include/Makefile
vote/2000/Makefile
vote/2001/Makefile
vote/2002/Makefile
vote/2003/Makefile
vote/2004/Makefile
vote/2004-10/Makefile
vote/2005/Makefile
vote/2005-10/Makefile
vote/2006/Makefile
vote/2007/Makefile
vote/2007-10/Makefile
vote/2009/Makefile
vote/2010/Makefile
vote/2011/Makefile
vote/2012/Makefile
vote/2013/Makefile
])
