SUBDIRS = include 2004-10 2005-10 2000 2001 2002 2003 2004 2005 2006 2007 2007-10 2009 2010 2011 2012 2013

urlpath = /vote
 
page_SCRIPTS = \
        index.html	\
        index.php	\
        results.php	\
        votes.php	\
	vote.php	\
	overview.html	\
	blt.php

page_DATA = \
	vote.css

include $(top_srcdir)/rules.common
